--- a/bundles/vdn/viz/ext/3dworld/vdn_viz_ext_3dworld-src/style/default.css
+++ b/bundles/vdn/viz/ext/3dworld/vdn_viz_ext_3dworld-src/style/default.css
@@ -1,31 +1,31 @@
 .land {
-  fill: #FFFFFF;
-  stroke-opacity: 1;
+  fill           : #FFFFFF;
+  stroke-opacity : 1;
 }
 
 .graticule {
-  fill: none;
-  stroke: black;
-  stroke-width:.5;
-  opacity:.2;
+  fill         : none;
+  stroke       : black;
+  stroke-width :.5;
+  opacity      :.2;
 }
 
 .labels {
-    font: 8px sans-serif;
-    fill: black;
-    opacity: .5;
-    display:none;
+    font    : 8px sans-serif;
+    fill    : black;
+    opacity : .5;
+    display : none;
 }
 
 .noclicks { 
-	pointer-events:none; 
+	pointer-events : none; 
 }
 
 .feature {  
-  opacity:.6;
-  stroke: white;
-  stroke-width: 1.1px;
-  stroke-opacity : 0.4;
+  opacity        : .6;
+  stroke         : white;
+  stroke-width   : 1.1px;
+  stroke-opacity : .4;
 }
 
   
